--- a/.github/workflows/deploy_surge.yaml
+++ b/.github/workflows/deploy_surge.yaml
@@ -29,5 +29,5 @@ jobs:
     - name: Install Surge
       run: npm install surge
     - name: Run Surge
-      run: surge ./ fahadbootcamp.surge.sh --token ${{secrets.SURGE_TOKEN}}
+      run: surge ./ fahadbootcampyoyo.surge.sh --token ${{secrets.SURGE_TOKEN}}
          
